--- a/requirements.txt
+++ b/requirements.txt
@@ -66,3 +66,9 @@ jsonschema==4.21.1
 # Utilities
 python-dateutil==2.8.2
 pytz==2024.1
+
+# High-Performance AI & Discovery
+faiss-cpu==1.7.4
+sentence-transformers==2.2.2
+pillow==10.0.1
+
